Prueba con botones y campos editables

--- a/Ejem1_ComponentesBasicos/app/src/main/res/values/strings.xml
+++ b/Ejem1_ComponentesBasicos/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ejemp01_ComponentesBasicos</string>
+    <string name="descargar_fotochop_zip">Descargar Fotochop.zip</string>
 </resources>
